--- a/EdulineV5/Video_SDK/AlivcSDK/LocalResources/en.lproj/InfoPlist.strings
+++ b/EdulineV5/Video_SDK/AlivcSDK/LocalResources/en.lproj/InfoPlist.strings
@@ -5,4 +5,4 @@
   Created by 张璠 on 2018/6/11.
   Copyright © 2018年 Alibaba. All rights reserved.
 */
-CFBundleDisplayName = "eduline网校";
+CFBundleDisplayName = "Eduline网校";
